<resources>
    <string name="app_name">CC</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>
    <string name="food">What have I eaten ?</string>
    <string name="recipes">Smart Recipes</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="logout">Log out</string>
    <string name="welcome_title">Προγραμματισμός κινητών συσκευών</string>
    <string name="stud1">Μπασαράς Φοίβος 18390195</string>
    <string name="stud2">Καραμπάσης Ευστράτιος 18390169</string>
    <string name="welcome_text">a diet app that will improve your lifestyle...</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_msg">Welcome to the app where you can easily count the calories you consume every day, and also choose suitable recipes for you from a wide variety...</string>
    <string name="full_app_name">Calories Calculator</string>

    //strings for recipes
    <string name="recipe1"><a href="https://www.argiro.gr/recipe/kinoa-me-fakes-avokanto-kai-chaloumi/">Lentil salad with quinoa</a></string>
    <string name="recipe2"><a href="https://www.argiro.gr/recipe/kroketes-me-spanaki/">Croquettes with spinach</a></string>
    <string name="recipe3"><a href="https://www.baskini.gr/blog/ygieino-keik-karotoy-healthy-carrot-cake/">Healthy carrot cake</a></string>
    <string name="recipe4"><a href="https://akispetretzikis.com/recipe/2646/superfood-cookies">Superfood cookies</a></string>
    <string name="recipe5"><a href="https://www.baskini.gr/blog/sintages/syntagi-enallaktika-mpergker-burger-chamiles-thermides/">Low calories burger</a></string>
    <string name="recipe6"><a href="https://www.mednutrition.gr/portal/syntages/kreas/15954-katsikaki-me-xoymous">Kid with hummus</a></string>


    <string name="error">Error!</string>
    <string name="scan">Scan QR</string>
</resources>