<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_what_i_eat"
            android:icon="@drawable/food"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/recipe"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/qr"
            android:title="@string/qr_scanner" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>